envoy/hcm/lab4/lab4-retry.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: hello_service
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            virtual_hosts:
            - name: hello_vhost
              domains: ["*"]
              routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: httpbin
                    retry_policy:
                      retry_on: "5xx"
                      num_retries: 5

  clusters:
  - name: httpbin
    connect_timeout: 5s
    load_assignment:
      cluster_name: single_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3030

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901




# static_resources:
#   listeners:
#   - name: listener_0
#     address:
#       socket_address:
#         address: 0.0.0.0
#         port_value: 10000
#     filter_chains:
#     - filters:
#       - name: envoy.filters.network.http_connection_manager
#         typed_config:
#           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
#           stat_prefix: hello_service
#           http_filters:
#           - name: envoy.filters.http.router
#             typed_config:
#               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
#           route_config:
#             virtual_hosts:
#             - name: httpbin
#               domains: ["*"]
#               routes:
#                 - match:
#                     prefix: "/"
#                   route:
#                     cluster: httpbin
#                     retry_policy:
#                       retry_on: "5xx"
#                       num_retries: 5
#   clusters:
#   - name: httpbin
#     connect_timeout: 5s
#     load_assignment:
#       cluster_name: single_cluster
#       endpoints:
#       - lb_endpoints:
#         - endpoint:
#             address:
#               socket_address:
#                 address: 127.0.0.1
#                 port_value: 3030
# admin:
#   address:
#     socket_address:
#       address: 127.0.0.1
#       port_value: 9901
